# xai-mini-project

./: .gitignore  ONBOARDING_EN.md  README.md  pyproject.toml  reproduce.sh  requirements-ontolearn.txt  requirements.txt  xai-mini-project-report.tex
configs/: aifb.yaml  aifb_baseline.yaml  mutag.yaml  mutag_node_id.yaml
report/: report.tex
src/xai_miniproject/: __init__.py  analyze.py  cli.py  config.py  data.py  explain.py  metrics.py  model.py  train.py  utils.py
tests/: test_config.py  test_metrics.py
